fix html validation errors

--- a/contact.html
+++ b/contact.html
@@ -60,18 +60,18 @@
                     <!-- card header separates from the card body and h1 tag allows for color change -->
                     <h1 class="card-header">Contact</h1>
                     <div class="card-body">
-                        <section class="form-group">
+                        <div class="form-group">
                             <label for="Name">Name</label>
                             <input type="text" class="form-control" id="Name" placeholder="First and last name">
-                        </section>
-                        <section class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="emailInput">Email</label>
                             <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
-                        </section>
-                        <section class="form-group">
+                        </div>
+                        <div class="form-group">
                             <label for="textArea">Message</label>
                             <textarea class="form-control" id="textArea" rows="3" placeholder="Message"></textarea>
-                        </section>
+                        </div>
                         <!-- used reset button on purpose since the submit will not actually be able to send message -->
                         <button type="reset" class="btn btn-primary">Submit</button>
                     </div>
