--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <section class="col-sm-6">
                         <h2>Current Projects</h2>
                         <!-- used portrait class for sizing in custom CSS and portrait orientation -->
-                        <img class="float-right rounded portrait" src="assets/Kids portrait.jpg" alt="Kids Portrait">
+                        <img class="float-right rounded portrait" src="assets/Kids_portrait.jpg" alt="Kids Portrait">
                         <p>My full time job is stay-at-home parent. It is the most exhausting job I've ever had, but
                             very rewarding in its own ways. With my youngest set to start Kindergarten in the fall of
                             2021, it is time to focus on other projects as well.</p>
