--- a/portfolio.html
+++ b/portfolio.html
@@ -65,16 +65,16 @@
                     <div class="col-sm-12 col-md-6">
                         <!-- used figure tag to include a caption. images on anchors to link to deployed projects -->
                         <figure class="figure">
-                            <a href="https://rsowald.github.io/prework-about-me/" target="_blank" rel="noopener"
-                                rel="noreferrer"><img class="figure-img img-fluid border border-dark"
+                            <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
+                                rel="noopener noreferrer"><img class="figure-img img-fluid border border-dark"
                                     src="assets/Prework_About_Me.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with minimal CSS</figcaption>
                         </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank" rel="noopener"
-                                rel="noreferrer"><img class="img-fluid border border-dark"
+                            <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
+                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
                                     src="assets/Horiseon_Refactor.JPG"></a>
                             <figcaption class="figure-caption">Refactored for maximum accessibilty and sustainability
                             </figcaption>
@@ -84,16 +84,16 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank" rel="noopener"
-                                rel="noreferrer"><img class="img-fluid border border-dark"
+                            <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
+                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
                                     src="assets/Favorite_Animal.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with CSS floats</figcaption>
                         </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <a href="https://rsowald.github.io/BandTribute/" target="_blank" rel="noopener"
-                                rel="noreferrer"><img class="img-fluid border border-dark"
+                            <a href="https://rsowald.github.io/BandTribute/" target="_blank"
+                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
                                     src="assets/Band_Tribute.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with no CSS</figcaption>
                         </figure>
