--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <!-- responsive nav bar same on each page -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Renae Sowald</a>
+        <a class="navbar-brand" href="index.html">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,11 +24,11 @@
         <!-- responsive toggler menu  -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -40,7 +42,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
                             rel="noopener noreferrer">GitHub</a>
-                        <a class="dropdown-item" href="www.linkedin.com/in/renae-sowald" target="_blank"
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/renae-sowald" target="_blank"
                             rel="noopener noreferrer">LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
                             rel="noopener noreferrer">Instagram</a>
@@ -67,7 +69,7 @@
                         <figure class="figure">
                             <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
                                 rel="noopener noreferrer"><img class="figure-img img-fluid border border-dark"
-                                    src="assets/Prework_About_Me.JPG"></a>
+                                    src="assets/portfolioScreenshots/Prework_About_Me.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with minimal CSS</figcaption>
                         </figure>
                     </div>
@@ -75,7 +77,7 @@
                         <figure class="figure">
                             <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
                                 rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/Horiseon_Refactor.JPG"></a>
+                                    src="assets/portfolioScreenshots/Horiseon_Refactor.JPG"></a>
                             <figcaption class="figure-caption">Refactored for maximum accessibilty and sustainability
                             </figcaption>
                         </figure>
@@ -86,7 +88,7 @@
                         <figure class="figure">
                             <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
                                 rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/Favorite_Animal.JPG"></a>
+                                    src="assets/portfolioScreenshots/Favorite_Animal.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with CSS floats</figcaption>
                         </figure>
                     </div>
@@ -94,7 +96,7 @@
                         <figure class="figure">
                             <a href="https://rsowald.github.io/BandTribute/" target="_blank"
                                 rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/Band_Tribute.JPG"></a>
+                                    src="assets/portfolioScreenshots/Band_Tribute.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with no CSS</figcaption>
                         </figure>
                     </div>
