--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All About Renae Sowald</title>
+    <title>Renae Sowald | Developer</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <!-- responsive nav bar same on each page -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Renae Sowald</a>
+        <a class="navbar-brand" href="index.html">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,11 +24,11 @@
         <!-- responsive toggler menu  -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -40,7 +42,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
                             rel="noopener noreferrer">GitHub</a>
-                        <a class="dropdown-item" href="www.linkedin.com/in/renae-sowald" target="_blank"
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/renae-sowald" target="_blank"
                             rel="noopener noreferrer">LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
                             rel="noopener noreferrer">Instagram</a>
@@ -50,79 +52,43 @@
 
         </div>
     </nav>
-
+    <!-- container wrapper for responsive content -->
     <main class="container-sm">
+        <!-- div to keep container 9 col wide -->
         <div class="row">
-            <article class="col-sm-8 background">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1>About Me</h1>
+            <article class="col-sm-9">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Hello, dev world!</h1>
+                        <img class="img-fluid float-right rounded-circle portrait" src="assets/indexPortrait.jpg"
+                            alt="Self Portrait">
+                        <p class="lead">My name is Renae Sowald, and I am on my way to being a full stack software
+                            engineer.</p>
+                        <hr class="my-4">
+                        <p>Visit my portfolio to see how far I've come on my journey.</p>
+                        <p class="lead">
+                            <a class="btn btn-primary btn" href="portfolio.html" role="button">Go</a>
+                        </p>
                     </div>
-                </div>
-                <div class="row">
-                    <section class="col-sm-6">
-                        <h2>Background</h2>
-                        <!-- used float class to wrap text around image within col -->
-                        <!-- used portrait class for sizing in custom CSS and portrait orientation -->
-                        <img class="float-right rounded portrait" src="assets/PORTRAIT.jpg" alt="Self Portrait">
-                        <p>I was born in Ohio, had several years of moving around the United States with military
-                            parents,
-                            and moved back to Ohio again in time to graduate high school. I met my future husband when
-                            we
-                            were set up on a blind date for Homecoming in my junior year of high school. We went to
-                            college together at
-                            The Ohio State University and got married a week after graduation.</p>
-                        <img class="float-left rounded my-2 img-fluid" src="assets/Oval_Ohio_State.jpg"
-                            alt="Ohio State Oval">
-                        <p>At OSU, I earned 2 BA degrees in History and English, but had no interest in teaching or
-                            graduate school. My real passion was writing, and I had a vague dream of being in
-                            publishing. Before I could start a career, my new husband's job took us to
-                            Washington DC, Germany, then Seattle in a span of 3 years. Just long enough to set my career
-                            goals adrift. I began working in retail until I had my first child. Now, with two children
-                            ages 6 and 4, it is time for a new chapter.</p>
-                    </section>
-                    <section class="col-sm-6">
-                        <h2>Current Projects</h2>
-                        <!-- used portrait class for sizing in custom CSS and portrait orientation -->
-                        <img class="float-right rounded portrait" src="assets/Kids_portrait.jpg" alt="Kids Portrait">
-                        <p>My full time job is stay-at-home parent. It is the most exhausting job I've ever had, but
-                            very rewarding in its own ways. With my youngest set to start Kindergarten in the fall of
-                            2021, it is time to focus on other projects as well.</p>
-                        <p> I am enrolled in a Trilogy cirriculum coding boot camp through the University of Washington.
-                            Less than a month in, I am already well on my way to becoming a front end developer. The
-                            goal is to be a full stack developer by the end of the course in June. I will be completing
-                            several projects throughout, which I will post here. To date, I have covered these major
-                            topics:</p>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Bootstrap</li>
-                            <li>Javascript</li>
-                        </ul>
-                        <p>This page is a project to showcase a responsive portfolio using Bootstrap (v4.5). Notice the
-                            responsive images and text as you resize your browser window or view the page on different
-                            devices. It is all possible with the power of CSS, but made much more developer friendly
-                            thanks to Bootstrap. Please visit the portfolio page for screenshots of my projects and
-                            links to the deployed application, if available.</p>
-                    </section>
                 </div>
             </article>
         </div>
     </main>
+
     <!-- sticky footer same on every page  -->
     <footer class="fixed-bottom footer mt-auto py-3">
         <div class="container">
             <span class="text-muted">Made with love by Renae Sowald 2020</span>
         </div>
     </footer>
-    <!--remember the bootstrap js source at the end!-->
+
+    <!-- quit forgetting to include the js link when you use toggle components! -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
