--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- responsive nav bar same on each page -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="index.html">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
                         <hr class="my-4">
                         <p>Visit my portfolio to see how far I've come on my journey.</p>
                         <p class="lead">
-                            <a class="btn btn-primary btn" href="portfolio.html" role="button">Go</a>
+                            <a class="btn btn-outline-info" href="portfolio.html" role="button">Go</a>
                         </p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
     <!-- sticky footer same on every page  -->
     <footer class="fixed-bottom footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Made with love by Renae Sowald 2020</span>
+            <span>Made with ♥ by Renae Sowald 2021 • renaesowald@gmail.com • 937-902-8398</span>
         </div>
     </footer>
 
