--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- responsive nav bar same on each page -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="index.html">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
 
     <main class="container-sm">
         <div class="row">
-            <article class="col-sm-8 background">
+            <article class="col-sm-9 background">
                 <div class="row">
                     <div class="col-sm-12">
                         <h1>About Me</h1>
@@ -115,7 +115,7 @@
     <!-- sticky footer same on every page  -->
     <footer class="fixed-bottom footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Made with love by Renae Sowald 2020</span>
+            <span>Made with ♥ by Renae Sowald 2021 • renaesowald@gmail.com • 937-902-8398</span>
         </div>
     </footer>
     <!--remember the bootstrap js source at the end!-->
