--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- responsive nav bar same on each page -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="index.html">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
     <main class="container-sm">
         <!-- div to keep container 8 col wide -->
         <div class="row">
-            <article class="col-sm-8 background">
+            <article class="col-sm-9 background">
                 <!-- card class provides a structured container, in this case with header -->
                 <form class="card">
                     <!-- card header separates from the card body and h1 tag allows for color change -->
@@ -85,7 +85,7 @@
     <!-- sticky footer same on every page  -->
     <footer class="fixed-bottom footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Made with love by Renae Sowald 2020</span>
+            <span>Made with ♥ by Renae Sowald 2021 • renaesowald@gmail.com • 937-902-8398</span>
         </div>
     </footer>
 
