added more content to portfolio page in cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,43 +62,99 @@
                         <h1>Portfolio</h1>
                     </div>
                 </div>
-                <!-- figures grouped into rows of 2 with separate col for each fig  -->
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <!-- used figure tag to include a caption. images on anchors to link to deployed projects -->
-                        <figure class="figure">
-                            <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
-                                rel="noopener noreferrer"><img class="figure-img img-fluid border border-dark"
-                                    src="assets/portfolioScreenshots/Prework_About_Me.JPG"></a>
-                            <figcaption class="figure-caption">Static HTML with minimal CSS</figcaption>
-                        </figure>
+                <!-- card decks make cards same height and equally spaced  -->
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/MealPlanner/" target="_blank" rel="noopener noreferrer"><img
+                                class="card-img-top" src="assets/portfolioScreenshots/Meal_Planner.jpg"
+                                alt="Meal Planner application"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>AJAX calls to third party APIs, jQuery, CSS</small></p>
+                        </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">
-                        <figure class="figure">
-                            <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
-                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/portfolioScreenshots/Horiseon_Refactor.JPG"></a>
-                            <figcaption class="figure-caption">Refactored for maximum accessibilty and sustainability
-                            </figcaption>
-                        </figure>
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/WeatherDashboard/" target="_blank"
+                            rel="noopener noreferrer"><img class="card-img-top"
+                                src="assets/portfolioScreenshots/Weather_Dashboard.jpg"
+                                alt="Weather dashboard application"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>AJAX calls to third party APIs, jQuery and CSS</small>
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <figure class="figure">
-                            <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
-                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/portfolioScreenshots/Favorite_Animal.JPG"></a>
-                            <figcaption class="figure-caption">Static HTML with CSS floats</figcaption>
-                        </figure>
+
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/PasswordGenerator/" target="_blank"
+                            rel="noopener noreferrer"><img src="assets/portfolioScreenshots/password_generator.jpg"
+                                class="card-img-top" alt="password generator application"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Simple JS functionality.</small></p>
+                        </div>
                     </div>
-                    <div class="col-sm-12 col-md-6">
-                        <figure class="figure">
-                            <a href="https://rsowald.github.io/BandTribute/" target="_blank"
-                                rel="noopener noreferrer"><img class="img-fluid border border-dark"
-                                    src="assets/portfolioScreenshots/Band_Tribute.JPG"></a>
-                            <figcaption class="figure-caption">Static HTML with no CSS</figcaption>
-                        </figure>
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/JsCodingQuiz/" target="_blank" rel="noopener noreferrer"><img
+                                src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
+                                alt="javascript quiz application"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Javascript, JS DOM manipulation, and local storage.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/WorkDayPlanner/" target="_blank"
+                            rel="noopener noreferrer"><img class="card-img-top"
+                                src="assets/portfolioScreenshots/Workday_Scheduler.jpg"
+                                alt="Workday scheduler application"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>JQuery, jQuery DOM manipulation, and local storage</small></p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
+                            rel="noopener noreferrer"><img class="card-img-top"
+                                src="assets/portfolioScreenshots/Horiseon_Refactor.JPG" alt="Horiseon Media page"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Refactored for maximum accessibility and sustainability</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
+                            rel="noopener noreferrer"><img src="assets/portfolioScreenshots/Favorite_Animal.JPG"
+                                alt="red panda information page" class="card-img-top"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Static HTML with CSS floats</small></p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
+                            rel="noopener noreferrer"><img class="card-img-top"
+                                src="assets/portfolioScreenshots/Prework_About_Me.JPG" alt="About Renae"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Static HTML with minimal CSS</small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <a href="https://rsowald.github.io/BandTribute/" target="_blank" rel="noopener noreferrer"><img
+                                src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
+                                class="card-img-top"></a>
+                        <div class="card-body">
+                            <p class="card-text"><small>Static HTML with no CSS</small></p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 invisible">
+
                     </div>
                 </div>
             </article>
