updated about page

--- a/about.html
+++ b/about.html
@@ -66,7 +66,8 @@
                         <h2>Background</h2>
                         <!-- used float class to wrap text around image within col -->
                         <!-- used portrait class for sizing in custom CSS and portrait orientation -->
-                        <img class="float-right rounded portrait" src="assets/aboutMe/PORTRAIT.jpg" alt="Self Portrait">
+                        <img class="float-right rounded portrait mb-2 ml-2" src="assets/aboutMe/PORTRAIT.jpg"
+                            alt="Self Portrait">
                         <p>I was born in Ohio, had several years of moving around the United States with military
                             parents,
                             and moved back to Ohio again in time to graduate high school. I met my future husband when
@@ -74,8 +75,8 @@
                             were set up on a blind date for Homecoming in my junior year of high school. We went to
                             college together at
                             The Ohio State University and got married a week after graduation.</p>
-                        <img class="float-left rounded my-2 img-fluid" src="assets/aboutMe/Oval_Ohio_State.jpg"
-                            alt="Ohio State Oval">
+                        <img class="float-left rounded my-2 img-fluid mb-2 mr-2"
+                            src="assets/aboutMe/Oval_Ohio_State.jpg" alt="Ohio State Oval">
                         <p>At OSU, I earned 2 BA degrees in History and English, but had no interest in teaching or
                             graduate school. My real passion was writing, and I had a vague dream of being in
                             publishing. Before I could start a career, my new husband's job took us to
@@ -86,13 +87,13 @@
                     <section class="col-sm-6">
                         <h2>Current Projects</h2>
                         <!-- used portrait class for sizing in custom CSS and portrait orientation -->
-                        <img class="float-right rounded portrait" src="assets/aboutMe/Kids_portrait.jpg"
+                        <img class="float-right rounded portrait mb-2 ml-2" src="assets/aboutMe/Kids_portrait.jpg"
                             alt="Kids Portrait">
                         <p>My full time job is stay-at-home parent. It is the most exhausting job I've ever had, but
                             very rewarding in its own ways. With my youngest set to start Kindergarten in the fall of
                             2021, it is time to focus on other projects as well.</p>
-                        <p> I am enrolled in a Trilogy cirriculum coding boot camp through the University of Washington.
-                            Less than a month in, I am already well on my way to becoming a front end developer. The
+                        <p> I am enrolled in a Trilogy curriculum coding boot camp through the University of Washington.
+                            One third of the way through, I can already call myself a front end developer. The
                             goal is to be a full stack developer by the end of the course in June. I will be completing
                             several projects throughout, which I will post here. To date, I have covered these major
                             topics:</p>
@@ -101,12 +102,16 @@
                             <li>CSS</li>
                             <li>Bootstrap</li>
                             <li>Javascript</li>
+                            <li>jQuery</li>
+                            <li>DOM traversal and manipulation</li>
+                            <li>Using client-side local storage</li>
+                            <li>Browser and third party APIs</li>
+                            <li>node.js</li>
                         </ul>
-                        <p>This page is a project to showcase a responsive portfolio using Bootstrap (v4.5). Notice the
-                            responsive images and text as you resize your browser window or view the page on different
-                            devices. It is all possible with the power of CSS, but made much more developer friendly
-                            thanks to Bootstrap. Please visit the portfolio page for screenshots of my projects and
-                            links to the deployed application, if available.</p>
+                        <p>This page is a project to showcase a responsive portfolio using Bootstrap, but it is also the
+                            beginning of my professional portfolio. It was designed to be responsive, and it will
+                            continue to become more dynamic. Please visit the portfolio page for screenshots of my
+                            projects and links to the deployed application, if available.</p>
                     </section>
                 </div>
             </article>
