--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,9 @@
                                 class="card-img-top" src="assets/portfolioScreenshots/Meal_Planner.jpg"
                                 alt="Meal Planner application"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Meal Planner</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/MealPlanner" target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>AJAX calls to third party APIs, jQuery, CSS</small></p>
                         </div>
                     </div>
@@ -78,6 +81,10 @@
                                 src="assets/portfolioScreenshots/Weather_Dashboard.jpg"
                                 alt="Weather dashboard application"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Weather Dashboard</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/WeatherDashboard"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>AJAX calls to third party APIs, jQuery and CSS</small>
                             </p>
                         </div>
@@ -90,6 +97,10 @@
                             rel="noopener noreferrer"><img src="assets/portfolioScreenshots/password_generator.jpg"
                                 class="card-img-top" alt="password generator application"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Password Generator</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/PasswordGenerator"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Simple JS functionality.</small></p>
                         </div>
                     </div>
@@ -98,6 +109,10 @@
                                 src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
                                 alt="javascript quiz application"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Javascript Quiz</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/JsCodingQuiz"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Javascript, JS DOM manipulation, and local storage.</small>
                             </p>
                         </div>
@@ -111,6 +126,10 @@
                                 src="assets/portfolioScreenshots/Workday_Scheduler.jpg"
                                 alt="Workday scheduler application"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Workday Planner</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/WorkDayPlanner"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>JQuery, jQuery DOM manipulation, and local storage</small></p>
                         </div>
                     </div>
@@ -119,6 +138,10 @@
                             rel="noopener noreferrer"><img class="card-img-top"
                                 src="assets/portfolioScreenshots/Horiseon_Refactor.JPG" alt="Horiseon Media page"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Accessibility Refactor of Horiseon Media Page</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/AccessibilityRefactor"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Refactored for maximum accessibility and sustainability</small>
                             </p>
                         </div>
@@ -131,6 +154,10 @@
                             rel="noopener noreferrer"><img src="assets/portfolioScreenshots/Favorite_Animal.JPG"
                                 alt="red panda information page" class="card-img-top"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Red Panda Fact Page</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/FavoriteAnimal"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Static HTML with CSS floats</small></p>
                         </div>
                     </div>
@@ -139,6 +166,10 @@
                             rel="noopener noreferrer"><img class="card-img-top"
                                 src="assets/portfolioScreenshots/Prework_About_Me.JPG" alt="About Renae"></a>
                         <div class="card-body">
+                            <h5 class="card-title">All About Renae Sowald</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/prework-about-me"
+                                    target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Static HTML with minimal CSS</small></p>
                         </div>
                     </div>
@@ -150,9 +181,13 @@
                                 src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
                                 class="card-img-top"></a>
                         <div class="card-body">
+                            <h5 class="card-title">Neon Trees Tribute Page</h5>
+                            <p class="card-text"><a href="https://github.com/rsowald/BandTribute" target="_blank">GitHub
+                                    Repo</a></p>
                             <p class="card-text"><small>Static HTML with no CSS</small></p>
                         </div>
                     </div>
+                    <!-- invisible card to keep even spacing with the other card in the deck -->
                     <div class="card mb-3 invisible">
 
                     </div>
