--- a/portfolio.html
+++ b/portfolio.html
@@ -65,26 +65,28 @@
                 <!-- card decks make cards same height and equally spaced  -->
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/MealPlanner/" target="_blank" rel="noopener noreferrer"><img
-                                class="card-img-top" src="assets/portfolioScreenshots/Meal_Planner.jpg"
-                                alt="Meal Planner application"></a>
+                        <img class="card-img-top" src="assets/portfolioScreenshots/Meal_Planner.jpg"
+                            alt="Meal Planner application">
                         <div class="card-body">
                             <h5 class="card-title">Meal Planner</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/MealPlanner" target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/MealPlanner/" target="_blank" class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/MealPlanner" target="_blank" class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>AJAX calls to third party APIs, jQuery, CSS</small></p>
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/WeatherDashboard/" target="_blank"
-                            rel="noopener noreferrer"><img class="card-img-top"
-                                src="assets/portfolioScreenshots/Weather_Dashboard.jpg"
-                                alt="Weather dashboard application"></a>
+                        <img class="card-img-top" src="assets/portfolioScreenshots/Weather_Dashboard.jpg"
+                            alt="Weather dashboard application">
                         <div class="card-body">
                             <h5 class="card-title">Weather Dashboard</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/WeatherDashboard"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/WeatherDashboard/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a class="card-text" href="https://github.com/rsowald/WeatherDashboard"
+                                target="_blank">GitHub
+                                Repo</a>
                             <p class="card-text"><small>AJAX calls to third party APIs, jQuery and CSS</small>
                             </p>
                         </div>
@@ -93,26 +95,28 @@
 
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/PasswordGenerator/" target="_blank"
-                            rel="noopener noreferrer"><img src="assets/portfolioScreenshots/password_generator.jpg"
-                                class="card-img-top" alt="password generator application"></a>
+                        <img src="assets/portfolioScreenshots/password_generator.jpg" class="card-img-top"
+                            alt="password generator application">
                         <div class="card-body">
                             <h5 class="card-title">Password Generator</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/PasswordGenerator"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/PasswordGenerator/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a class="card-text" href="https://github.com/rsowald/PasswordGenerator"
+                                target="_blank">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Simple JS functionality.</small></p>
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/JsCodingQuiz/" target="_blank" rel="noopener noreferrer"><img
-                                src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
-                                alt="javascript quiz application"></a>
+                        <img src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
+                            alt="javascript quiz application">
                         <div class="card-body">
                             <h5 class="card-title">Javascript Quiz</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/JsCodingQuiz"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/JsCodingQuiz/" target="_blank" class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/JsCodingQuiz" target="_blank" class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Javascript, JS DOM manipulation, and local storage.</small>
                             </p>
                         </div>
@@ -121,27 +125,29 @@
 
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/WorkDayPlanner/" target="_blank"
-                            rel="noopener noreferrer"><img class="card-img-top"
-                                src="assets/portfolioScreenshots/Workday_Scheduler.jpg"
-                                alt="Workday scheduler application"></a>
+                        <img class="card-img-top" src="assets/portfolioScreenshots/Workday_Scheduler.jpg"
+                            alt="Workday scheduler application">
                         <div class="card-body">
                             <h5 class="card-title">Workday Planner</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/WorkDayPlanner"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/WorkDayPlanner/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/WorkDayPlanner" target="_blank" class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>JQuery, jQuery DOM manipulation, and local storage</small></p>
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
-                            rel="noopener noreferrer"><img class="card-img-top"
-                                src="assets/portfolioScreenshots/Horiseon_Refactor.JPG" alt="Horiseon Media page"></a>
+                        <img class="card-img-top" src="assets/portfolioScreenshots/Horiseon_Refactor.JPG"
+                            alt="Horiseon Media page">
                         <div class="card-body">
                             <h5 class="card-title">Accessibility Refactor of Horiseon Media Page</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/AccessibilityRefactor"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/AccessibilityRefactor" target="_blank"
+                                class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Refactored for maximum accessibility and sustainability</small>
                             </p>
                         </div>
@@ -150,26 +156,29 @@
 
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
-                            rel="noopener noreferrer"><img src="assets/portfolioScreenshots/Favorite_Animal.JPG"
-                                alt="red panda information page" class="card-img-top"></a>
+                        <img src="assets/portfolioScreenshots/Favorite_Animal.JPG" alt="red panda information page"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Red Panda Fact Page</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/FavoriteAnimal"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/FavoriteAnimal" target="_blank" class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Static HTML with CSS floats</small></p>
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
-                            rel="noopener noreferrer"><img class="card-img-top"
-                                src="assets/portfolioScreenshots/Prework_About_Me.JPG" alt="About Renae"></a>
+                        <img class="card-img-top" src="assets/portfolioScreenshots/Prework_About_Me.JPG"
+                            alt="About Renae">
                         <div class="card-body">
                             <h5 class="card-title">All About Renae Sowald</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/prework-about-me"
-                                    target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/prework-about-me/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/prework-about-me" target="_blank"
+                                class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Static HTML with minimal CSS</small></p>
                         </div>
                     </div>
@@ -177,13 +186,14 @@
 
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <a href="https://rsowald.github.io/BandTribute/" target="_blank" rel="noopener noreferrer"><img
-                                src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
-                                class="card-img-top"></a>
+                        <img src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
+                            class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Neon Trees Tribute Page</h5>
-                            <p class="card-text"><a href="https://github.com/rsowald/BandTribute" target="_blank">GitHub
-                                    Repo</a></p>
+                            <a href="https://rsowald.github.io/BandTribute/" target="_blank" class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/BandTribute" target="_blank" class="card-text">GitHub
+                                Repo</a>
                             <p class="card-text"><small>Static HTML with no CSS</small></p>
                         </div>
                     </div>
