put buttons on homepage on separate lines

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         <hr class="my-4">
                         <p>Visit my portfolio to see how far I've come on my journey.</p>
                         <p class="lead">
-                            <a class="btn btn-outline-info" href="portfolio.html" role="button">Go</a>
+                            <a class="btn btn-outline-info mb-3" href="portfolio.html" role="button">Portfolio</a>
+                            <br>
                             <a class="btn btn-outline-info" href="assets/resume.pdf" role="button">My Resume</a>
                         </p>
                     </div>
