resume opens in new tab

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         <p class="lead">
                             <a class="btn btn-outline-info mb-3" href="portfolio.html" role="button">Portfolio</a>
                             <br>
-                            <a class="btn btn-outline-info" href="assets/resume.pdf" role="button">My Resume</a>
+                            <a class="btn btn-outline-info" href="assets/resume.pdf" target="_blank" role="button">My
+                                Resume</a>
                         </p>
                     </div>
                 </div>
