added team profile generator project

--- a/portfolio.html
+++ b/portfolio.html
@@ -197,9 +197,20 @@
                             <p class="card-text"><small>Static HTML with no CSS</small></p>
                         </div>
                     </div>
-                    <!-- invisible card to keep even spacing with the other card in the deck -->
-                    <div class="card mb-3 invisible">
 
+                    <div class="card mb-3 portfolio">
+                        <img src="assets/portfolioScreenshots/team_profile_generator.JPG"
+                            alt="Team Profile Generator application" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Team Profile Generator</h5>
+                            <a href="https://via.placeholder.com/150" target="_blank" class="card-text">Generated
+                                Example</a>
+                            •
+                            <a href="https://github.com/rsowald/TeamProfileGenerator" target="_blank"
+                                class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Command Line App to generate styled HTML</small></p>
+                        </div>
                     </div>
                 </div>
             </article>
