--- a/portfolio.html
+++ b/portfolio.html
@@ -199,11 +199,12 @@
                     </div>
 
                     <div class="card mb-3 portfolio">
-                        <img src="assets/portfolioScreenshots/team_profile_generator.JPG"
+                        <img src="assets/portfolioScreenshots/team_profile_generator.jpg"
                             alt="Team Profile Generator application" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Team Profile Generator</h5>
-                            <a href="https://via.placeholder.com/150" target="_blank" class="card-text">Generated
+                            <a href="assets/portfolioScreenshots/team_profile_generator.jpg" target="_blank"
+                                class="card-text">Generated
                                 Example</a>
                             •
                             <a href="https://github.com/rsowald/TeamProfileGenerator" target="_blank"
