--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -31,7 +32,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <!-- dropdown menu for social media links  -->
                 <li class="nav-item dropdown">
@@ -41,11 +42,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
-                            rel="noopener noreferrer">GitHub</a>
+                            rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                         <a class="dropdown-item" href="https://www.linkedin.com/in/renae-sowald" target="_blank"
-                            rel="noopener noreferrer">LinkedIn</a>
+                            rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
-                            rel="noopener noreferrer">Instagram</a>
+                            rel="noopener noreferrer"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </li>
             </ul>
@@ -59,11 +60,12 @@
             <div class="col-sm-9">
                 <div class="jumbotron jumbotron-fluid background">
                     <div class="container">
-                        <h1 class="display-4">Hello, dev world!</h1>
+                        <h1 class="display-4">Hello, Dev World!</h1>
                         <img class="img-fluid float-right rounded-circle portrait" src="assets/indexPortrait.jpg"
                             alt="Self Portrait">
-                        <p class="lead">My name is Renae Sowald, and I am on my way to being a full stack software
-                            engineer.</p>
+                        <p class="lead">My name is Renae Sowald, and I am a new full stack web developer. I am
+                            two-thirds of the way through a coding boot camp with the University of Washington and hope
+                            to learn more popular technologies before moving into a career in development.</p>
                         <hr class="my-4">
                         <p>Visit my portfolio to see how far I've come on my journey.</p>
                         <p class="lead">
